plugins {
    id 'java'
}

group = 'org.lokhit'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}



dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.16.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.16.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview', '--release', '25']
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
    systemProperty 'org.mockito.plugins.MockMaker', 'mock-maker-subclass'

    doFirst {
        def extDir = new File(project.layout.buildDirectory.get().asFile, 'resources/test/mockito-extensions')
        extDir.mkdirs()
        new File(extDir, 'org.mockito.plugins.MockMaker').text = 'mock-maker-subclass'
    }
}
